fix: press, remove billboard on mobile

--- a/pages/press/index.css
+++ b/pages/press/index.css
@@ -47,7 +47,7 @@
 	}
 
 	#press__billboard {
-		height: 20em;
+		display: none;
 	}
 
 
